# llvm-runtime-pass

./: Proposal.md  README.md
machsuite/: Makefile
machsuite/machsuite-aes/: Makefile  aes.h
machsuite/machsuite-backprop/: Makefile
machsuite/machsuite-bfs-bulk/: Makefile  bfs.h
machsuite/machsuite-bfs-queue/: bfs.h
machsuite/machsuite-fft-transpose/: Makefile  bench.c
machsuite/machsuite-gemm-blocked/: gemm.c
machsuite/machsuite-gemm-ncubed/: bench.c
machsuite/machsuite-gemm-ncubed-int/: bench.c  common.mk  gemm.c
machsuite/machsuite-kmp/: kmp.h
machsuite/machsuite-md-grid/: bench.c
machsuite/machsuite-md-knn/: Makefile
machsuite/machsuite-nw/: Makefile  bench.c  nw.h
machsuite/machsuite-sort-merge/: bench.c  sort.h
machsuite/machsuite-sort-radix/: Makefile  sort.c
machsuite/machsuite-spmv-crs/: spmv.h
machsuite/machsuite-spmv-ellpack/: Makefile  bench.c
machsuite/machsuite-stencil-stencil2d/: stencil.c  stencil.h
machsuite/machsuite-stencil-stencil3d/: stencil.c  stencil.h
machsuite/machsuite-viterbi/: viterbi.c
skeleton/: CMakeLists.txt  Leech.cpp  Pragma.cpp  Shackleton.cpp  Skeleton.cpp
tests/: Makefile  common.mk
tests/common/: common.mk  embed.c  overload.py
tests/diamond/: Makefile  check.data  diamond.c  diamond.h  embed.c  main.c  time.data
tests/machsuite-aes/: Makefile  main.c
tests/machsuite-backprop/: Makefile  backprop.h  bench.c
tests/machsuite-bfs-queue/: Makefile  main.c
tests/machsuite-fft-strided/: fft.h  main.c
tests/machsuite-fft-transpose/: Makefile  fft.h
tests/machsuite-gemm-blocked/: Makefile  gemm.c  gemm.h  main.c  time.data
tests/machsuite-gemm-ncubed/: Makefile  check_int.data  gemm.c  gemm.h  main.c  matmul.c  time.data
tests/machsuite-gemm-ncubed-int/: Makefile  gemm.h
tests/machsuite-kmp/: Makefile  bench.c  embed.c  kmp.h  main.c
tests/machsuite-md-grid/: Makefile  md.h
tests/machsuite-md-knn/: main.c  md.c  md.h
tests/machsuite-nw/: Makefile
tests/machsuite-sort-merge/: Makefile
tests/machsuite-sort-radix/: main.c  sort.h
tests/machsuite-spmv-crs/: bench.c
tests/machsuite-spmv-ellpack/: Makefile  overload.py  spmv.c  spmv.h
(+24 files in other folders)
